<resources>
	<string name="app_name">Timetable</string>
	<string name="app_main_activity_name">Timetables</string>
	<string name="app_new_timetable_activity_name">New Timetable</string>
	<string name="app_edit_timetable_activity_name">Edit Timetable</string>

	<string name="action_setup_timetable">Set up Timetable</string>
	<string name="action_settings">Settings</string>
	<string name="action_save_edit">Save</string>
	<string name="action_preview_timetable">Preview Timetable</string>

	<string name="action_edit_timetable">Edit This Timetable</string>

	<string name="edit_timetable_name">Name</string>
	<string name="edit_timetable_description">Short description</string>
	<string name="edit_day_name">Name</string>
	<string name="edit_period_name">Name</string>

	<string name="timetable_card_date">Created: %1$s</string>

	<string name="dialog_cancel">Cancel</string>
	<string name="dialog.new_timetable_create">Create</string>
	<string name="dialog.new_timetable_create_title">New Timetable</string>

	<string name="no_timetables">You have no timetables</string>
	<string name="empty_timetable">This timetable is empty</string>
	<string name="empty_day">This day is empty</string>

	<string name="title_activity_view_timetable">View Timetable Activity</string>
	<string name="title_activity_days_overview">Days Overview Activity</string>

	<string name="divider_bullet">&#8226;</string>
	<string name="action_view_timetable_back">Back</string>
	<string name="action_done_edit">Done</string>
	<string name="action_edit_view">Edit</string>
	<string name="edit_days_heading">Days</string>
	<string name="edit_details_heading">Details</string>
	<string name="no_periods">There are no time periods set for this day!</string>
	<string name="edit_periods_heading">Periods</string>
	<string name="edit_period_end_time">End Time</string>
	<string name="edit_period_start_time">Start Time</string>
	<string name="date_not_set">Not set</string>
	<string name="edit_colour">Colour</string>
    <string name="period_default_start">Start</string>
    <string name="period_default_end">End</string>
    <string name="period_time_separator">-</string>
    <string name="action_mode_switch">Switch Mode</string>
    <string name="long_latin">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam consectetur fermentum ante at lacinia. Nullam non mi et orci consequat pretium vitae id turpis. Duis vitae lectus vitae augue porta volutpat. Donec non consequat enim. Nunc non efficitur felis. Curabitur quis nunc rhoncus, viverra elit et, pellentesque elit. Curabitur eu tellus non elit dignissim congue. Aenean viverra faucibus diam id varius. Nulla dictum pretium diam sit amet lobortis. Mauris imperdiet facilisis velit et ornare. Donec bibendum est vel ex laoreet, eu sodales est feugiat. Nunc lacinia augue erat.  Cras porttitor odio sed ex elementum, eget tempor diam feugiat. Nulla finibus vulputate neque, eu fermentum nunc dignissim id. Suspendisse ut vehicula quam, ac eleifend augue. Integer vestibulum venenatis lorem vitae facilisis. Curabitur gravida rutrum eros. Mauris pretium tempor nisi, sit amet rhoncus tellus hendrerit ac. Sed aliquet id nisi eget scelerisque. Nam eleifend ligula a massa egestas, sit amet finibus magna consectetur. Integer viverra orci ipsum, sit amet placerat eros imperdiet et. Proin dolor nulla, ultricies vel sapien et, venenatis fringilla lorem. Aliquam sagittis enim non nisi gravida ornare. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</string>
    <string name="period_times_heading">Times</string>
</resources>
