<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
>

    <ScrollView
        android:id="@+id/edit_period_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true"
        android:clickable="true"
        android:focusableInTouchMode="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clipChildren="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditCardLayout"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_details_heading"
                    style="@style/SettingsHeadingTextView"
                    />

                <!-- Name edit text -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/period_name_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_period_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        style="@style/BasicEditText"
                        />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_colour"
                    style="@style/SmallSettingsHeadingTextView"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    >
                    <include layout="@layout/view_colour_rect_item"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditCardLayout"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/period_times_heading"
                    style="@style/SettingsHeadingTextView"
                    />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_period_end_time"
                        style="@style/SmallSettingsHeadingTextView"
                        />

                    <LinearLayout
                        android:id="@+id/edit_period_end_time_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal"
                        >

                        <TextView
                            android:id="@+id/edit_period_end_time_main_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TimeTextView"
                            />

                        <TextView
                            android:id="@+id/edit_period_end_time_second_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/SmallTimeTextView"
                            />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_period_start_time"
                        style="@style/SmallSettingsHeadingTextView"
                        />

                    <LinearLayout
                        android:id="@+id/edit_period_start_time_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal"
                        >

                        <TextView
                            android:id="@+id/edit_period_start_time_main_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TimeTextView"
                            />

                        <TextView
                            android:id="@+id/edit_period_start_time_second_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/SmallTimeTextView"
                            />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/delete_period_fab"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_delete_white"
        app:backgroundTint="@color/red"
        />

</RelativeLayout>